genealogy-macros/tests/ui/field_missing_trait_implementations.rs
use genealogy_macros::record;

#[record]
struct Record {
	value: Struct,
}

struct Struct;

pub fn main() {}
